force-app/main/default/objects/Policy__c/fields/Amountt__c.field-meta.xml
<CustomField>
    <fullName>Amountt__c</fullName>
    <label>Amountt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>