force-app/main/default/objects/Policy__c/fields/Is_Important__c.field-meta.xml
<CustomField>
    <fullName>Is_Important__c</fullName>
    <formula>Text(Account__r.Type ) = &apos;Prospect&apos; &amp;&amp;  Amountt__c  &gt; 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Important?</label>
    <type>Checkbox</type>
</CustomField>