force-app/main/default/objects/Policy__c/fields/Police_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Police_Maturity_Date__c</fullName>
    <formula>ADDMONTHS( Policy_Start_Date_And_Time__c ,7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Police Maturity Date</label>
    <type>Date</type>
</CustomField>