force-app/main/default/objects/Policy__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <displayFormat>PL-{0000}</displayFormat>
    <label>Policy Number</label>
    <type>AutoNumber</type>
</CustomField>