force-app/main/default/objects/Policy__c/fields/Policy_Period__c.field-meta.xml
<CustomField>
    <fullName>Policy_Period__c</fullName>
    <formula>Policy_End_Date_And_Time__c  -  Policy_Start_Date_And_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>