force-app/main/default/objects/Policy__c/fields/Policy_Start_Date_And_Time__c.field-meta.xml
<CustomField>
    <fullName>Policy_Start_Date_And_Time__c</fullName>
    <label>Policy Start Date And Time</label>
    <type>DateTime</type>
</CustomField>