force-app/main/default/objects/Policy__c/fields/Policy_Status__c.field-meta.xml
<CustomField>
    <fullName>Policy_Status__c</fullName>
    <label>Policy Status</label>
    <summarizedField>Policy_Line_Item__c.CreatedDate</summarizedField>
    <summaryFilterItems>
        <field>Policy_Line_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>Policy_Line_Item__c.Policy__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>