force-app/main/default/objects/Policy__c/fields/Policy_Yesterday__c.field-meta.xml
<CustomField>
    <fullName>Policy_Yesterday__c</fullName>
    <formula>NOW()  - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Yesterday</label>
    <type>Date</type>
</CustomField>