force-app/main/default/objects/Policy__c/recordTypes/Business_Policy.recordType-meta.xml
<RecordType>
    <fullName>Business_Policy</fullName>
    <active>true</active>
    <label>Business Policy</label>
</RecordType>