force-app/main/default/objects/Policy__c/recordTypes/Person_Policy.recordType-meta.xml
<RecordType>
    <fullName>Person_Policy</fullName>
    <active>true</active>
    <label>Person Policy</label>
</RecordType>