force-app/main/default/objects/Policy__c/validationRules/date.validationRule-meta.xml
<ValidationRule>
    <fullName>date</fullName>
    <active>true</active>
    <errorConditionFormula>Policy_End_Date_And_Time__c  &lt;  Policy_Start_Date_And_Time__c</errorConditionFormula>
    <errorMessage>Enter dates correctly</errorMessage>
</ValidationRule>