force-app/main/default/objects/Policy__c/validationRules/Record_Updation.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_Updation</fullName>
    <active>false</active>
    <errorConditionFormula>AND (!ISNEW(),  Contact__c  = &apos;NULL&apos; )</errorConditionFormula>
    <errorMessage>Enter contact details properly</errorMessage>
</ValidationRule>