force-app/main/default/objects/Policy__c/listViews/CaseQueue_Policy.listView-meta.xml
<ListView>
    <fullName>CaseQueue_Policy</fullName>
    <filterScope>Queue</filterScope>
    <label>CaseQueue</label>
    <queue>CaseQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>