force-app/main/default/objects/Policy__c/listViews/Lead_Queue_Policy.listView-meta.xml
<ListView>
    <fullName>Lead_Queue_Policy</fullName>
    <filterScope>Queue</filterScope>
    <label>Lead Queue</label>
    <queue>Lead_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>